force-app/main/default/objects/Application__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>If you still work with this company enter today&apos;s date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>