force-app/main/default/objects/Application__c/fields/Income_after_Tax__c.field-meta.xml
<CustomField>
    <fullName>Income_after_Tax__c</fullName>
    <formula>Income_before_Tax__c  - (Income_before_Tax__c * 0.35)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income after Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>