force-app/main/default/objects/Application__c/fields/Income_before_Tax__c.field-meta.xml
<CustomField>
    <fullName>Income_before_Tax__c</fullName>
    <label>Income before Tax ( Yearly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>