force-app/main/default/objects/Application__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>