force-app/main/default/objects/Application__c/fields/Loan_Approved__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approved__c</fullName>
    <label>Loan Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>