force-app/main/default/objects/Application__c/fields/Loan_Approved_Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approved_Monthly_Repayment__c</fullName>
    <formula>IF(ISPICKVAL(  Loan_Approved_Terms__c , &apos;12 Months&apos;), Loan_Approved_Repayment__c/12,
   IF(ISPICKVAL( Loan_Approved_Terms__c , &apos;24 Months&apos;), Loan_Approved_Repayment__c/24,
    IF(ISPICKVAL( Loan_Approved_Terms__c , &apos;36 Months&apos;), Loan_Approved_Repayment__c/36,
     IF(ISPICKVAL( Loan_Approved_Terms__c , &apos;48 Months&apos;), Loan_Approved_Repayment__c/48,
      IF(ISPICKVAL( Loan_Approved_Terms__c , &apos;60 Months&apos;), Loan_Approved_Repayment__c/60,Null 
    )
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Approved Monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>