force-app/main/default/objects/Application__c/fields/Loan_Approved_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approved_Repayment__c</fullName>
    <formula>Loan_Approved__c  + (Loan_Approved__c *  Interest__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Approved Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>