force-app/main/default/objects/Application__c/fields/Loan_Approved_Terms__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approved_Terms__c</fullName>
    <label>Loan Approved Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>48 Months</fullName>
            </value>
            <value>
                <fullName>60 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>