force-app/main/default/objects/Application__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loan_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Starting a Business</fullName>
            </value>
            <value>
                <fullName>Land Purchase</fullName>
            </value>
            <value>
                <fullName>House Purchase</fullName>
            </value>
            <value>
                <fullName>Car Purchase</fullName>
            </value>
            <value>
                <fullName>House Renovation</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Secondary Education</fullName>
            </value>
            <value>
                <fullName>Primary Education</fullName>
            </value>
            <value>
                <fullName>Study Abroad</fullName>
            </value>
            <value>
                <fullName>Land Filling</fullName>
            </value>
            <value>
                <fullName>Business Revival</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>