force-app/main/default/objects/Application__c/fields/Loan_Requested__c.field-meta.xml
<CustomField>
    <fullName>Loan_Requested__c</fullName>
    <label>Loan Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>