force-app/main/default/objects/Application__c/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <label>Loan Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>