force-app/main/default/objects/Application__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student Loan</fullName>
            </value>
            <value>
                <fullName>Housing Loan</fullName>
            </value>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>