force-app/main/default/objects/Application__c/fields/Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Repayment__c</fullName>
    <formula>Total_Repayment__c / Loan_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>