force-app/main/default/objects/Application__c/fields/Total_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Total_Repayment__c</fullName>
    <formula>Loan_Requested__c +( Loan_Requested__c * Interest__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>