force-app/main/default/objects/Application__c/validationRules/Provide_On_Hold_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_On_Hold_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

   ISPICKVAL(Status__c  , &apos;On Hold&apos;), 
   ISBLANK( On_Hold_Reason__c ) 
)</errorConditionFormula>
    <errorDisplayField>On_Hold_Reason__c</errorDisplayField>
    <errorMessage>Please Provide On Hold reason</errorMessage>
</ValidationRule>