force-app/main/default/objects/Application__c/validationRules/Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
   ISPICKVAL( Status__c , &apos;Rejected&apos;),  
   ISBLANK(Rejection_Reason__c  )
 )</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please provide rejection reason</errorMessage>
</ValidationRule>